fix layout issues

--- a/src/style/scss/_base.scss
+++ b/src/style/scss/_base.scss
@@ -31,6 +31,7 @@ article {
   font-family: "Futura Today Bold", Arial,sans-serif;
   font-size: 100%;
   padding: 0 !important;
+  position: relative;
   width: 100% !important;
   @media (max-width: 500px) {
     font-size: 85%;
