--- a/src/style/scss/_layout.scss
+++ b/src/style/scss/_layout.scss
@@ -5,5 +5,5 @@
 
 .iapp-app-wrap {
     padding-bottom: 190px;
-    position: relative;
+    // position: relative;
 }
